--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ body{
 
 section{
     background-color: #EEEEEF;
-    padding: 5px;
+    padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
     margin: 5px;
     -webkit-border-radius: 10px;
+    width: 80%;
 }
 
 section h1{
@@ -18,5 +19,63 @@ section h1{
 
 section textarea{
     width: 100%;
-    min-height: 200px;
+    height: 25px;
+}
+
+section h4{
+    margin: 0;
+    padding: 0;
+}
+
+nav{
+    background-color: #9cf;
+    position: fixed;
+    right: 0;
+    top: 0;
+    padding: 10px;
+    padding-top: 4px;
+    height: 100%;
+    width: 16%;
+}
+
+nav header{
+    color: white;
+    font-size: 40px;
+    padding-bottom: 10px;
+}
+
+nav header .meta{
+    font-size: 12px;
+    padding-left: 3px;
+}
+
+nav ul{
+    color: white;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+nav ul a{
+    color: #39F;
+    text-decoration: none;
+}
+
+#posts, textarea{
+    font-family: arial;
+    font-size: 15px;
+}
+
+textarea{
+    background-color: transparent;
+    border: 0;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.active{
+    background-color: white;
+    padding: 8px;
+    border: 2px solid #39f;
 }
