--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section{
     padding-right: 10px;
     margin: 5px;
     -webkit-border-radius: 10px;
-    width: 80%;
+    width: 77%;
 }
 
 section h1{
@@ -57,7 +57,7 @@ nav ul{
 }
 
 nav ul a{
-    color: #39F;
+    color: #06C;
     text-decoration: none;
 }
 
@@ -78,4 +78,17 @@ textarea{
     background-color: white;
     padding: 8px;
     border: 2px solid #39f;
+}
+
+#overview header{
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 2px;
+}
+
+#overview ul{
+    padding: 0;
+    margin: 0;
+    font-size: 13px;
 }
