--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ section{
     padding-right: 10px;
     margin: 5px;
     -webkit-border-radius: 10px;
-    width: 77%;
+    width: 75%;
 }
 
 section h1{
@@ -27,15 +27,22 @@ section h4{
     padding: 0;
 }
 
+#logo{
+    cursor: pointer;
+}
+
 nav{
+    -webkit-box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.1);
     background-color: #9cf;
+    border-left: 10px solid #39F;
     position: fixed;
-    right: 0;
+    right: -320px;
     top: 0;
     padding: 10px;
-    padding-top: 4px;
+    padding-top: 0px;
     height: 100%;
-    width: 16%;
+    min-width: 500px;
+    z-index: 2;
 }
 
 nav header{
@@ -59,6 +66,29 @@ nav ul{
 nav ul a{
     color: #06C;
     text-decoration: none;
+}
+
+#posts header{
+    margin: 0;
+    padding: 0;
+    padding-left: 7px;
+    padding-bottom: 4px;
+    font-family: arial;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+#title input{
+    font-family: arial;
+    width: 80%;
+    border: 0;
+    outline: 0;
+    background: 0;
+    padding: 0;
+    margin: 0;
+    margin-left: -1px;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 #posts, textarea{
@@ -91,4 +121,32 @@ textarea{
     padding: 0;
     margin: 0;
     font-size: 13px;
+}
+
+#advanced{
+    background-color: white;
+    border: 1px solid #EEEEEF;
+    -webkit-box-shadow: -1px 5px 10px rgba(0, 0, 0, 0.1);
+    height: 70%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    float: right;
+    padding-left: 10px;
+    width: 280px;
+}
+
+#advanced header{
+    color: #9CF;
+}
+
+#wash{
+    background-color: rgba(255,255,255,0.5);
+    display: none;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: fixed;
+    z-index: 1;
+    top:0;
+    left: 0;
 }
