--- a/style.css
+++ b/style.css
@@ -164,3 +164,18 @@ textarea{
     top:0;
     left: 0;
 }
+
+#dev{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    border: 1px solid #CCC;
+    width: 100%;
+    height: 25px;
+}
+
+#dev-box{
+    border: 0;
+    width: 90%;
+}
