--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,20 @@ section h1{
     margin: 0;
 }
 
+section p{
+    margin-top: 0;
+}
+
 section textarea{
     width: 100%;
     height: 25px;
 }
 
-section h4{
+section h3{
     margin: 0;
+    margin-bottom: 5px;
     padding: 0;
+    font-size: 16px;
 }
 
 .bottomWash{
