--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,12 @@ section h3{
     font-size: 16px;
 }
 
+section ul, section ol{
+    padding-left: 20px;
+    padding-top: 0px;
+    margin-top: 0;
+}
+
 .bottomWash{
     height: 300px;
 }
