Fixed Low Alert Border STyle

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,6 @@ section.active{
     background-color: #FFFFCC;
 }
 .alert.low{
-    border: 1px solid #CCFF99;
+    border: 1px solid #99FF99;
     background-color: #CCFFCC;
 }
