--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ section{
     padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 7px;
     margin: 5px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
