--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ section.active{
 }
 
 #advanced{
+    position: relative;
     float: right;
     width: 315px;
     height: 100%;
@@ -360,8 +361,14 @@ section.active{
 #document-list .date, #document-list .count{
     display: block;
     font-size: .9em;
-    line-height: 1.4em;
+    line-height: 1.3em;
     color: #999;
+}
+
+#advanced .compact-box{
+    position: absolute;
+    bottom: 15px;
+    left: 5px;
 }
 
 #actions{
