--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-body, textarea{
-    font-family: Verdana, Arial, sans-serif;
-    font-size: 12px;
-    line-height: 18px;
-}
-
 header, section, nav, footer, article{
     display: block;
 }
@@ -25,44 +19,20 @@ section{
     
 }
 
-section.selected, #document-list li.selected {
+section.selected{
     background: #FFEFCC;
-}
-
-section p{
-    margin-top: 0;
-    line-height: 19px;
 }
 
 section textarea{
     width: 100%;
     height: 25px;
-}
-
-section h3{
-    margin: 0;
-    margin-bottom: 5px;
+    background-color: transparent;
+    border: 0;
+    outline: 0;
     padding: 0;
-    font-family: 'Trebuchet Ms';
-    font-size: 15px;
+    margin: 0;
 }
 
-section ul, section ol{
-    padding-left: 20px;
-    padding-top: 0px;
-    margin-top: 0;
-}
-
-section pre{
-    font: 12px Monaco,Consolas,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
-    background-color: #F0F7FF;
-    border-top: 1px solid #DEDEDE;
-    border-bottom: 1px solid #DEDEDE;
-    padding: 10px;
-    padding-left: 10px;
-    margin-left: -10px;
-    margin-right: -10px;
-}
 
 .bottomWash{
     height: 300px;
@@ -95,7 +65,7 @@ nav{
     padding-top: 0px;
     padding-right: 0;
     height: 100%;
-    width: 550px;
+    width: 555px;
     z-index: 2;
 }
 
@@ -198,26 +168,14 @@ nav ul#links .break{
     margin-bottom: 5px;
 }
 
-#posts header{
-    margin: 0;
-    padding: 0;
-    padding-left: 7px;
-    padding-bottom: 5px;
-    font-family: 'Trebuchet MS';
-    font-weight: bold;
-    font-size: 18px;
-}
-
 #title, #title input{
-    font-family: 'Trebuchet MS';
-    font-weight: bold;
-    font-size: 18px;
+    margin-left: 8px;
 }
 
 #title input{
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    width: 76%;
+    width: 95%;
     border: 0;
     outline: 0;
     background: 0;
@@ -226,14 +184,9 @@ nav ul#links .break{
     margin-left: -1px;
     border: 1px solid #39F;
     padding: 5px;
-}
-
-textarea{
-    background-color: transparent;
-    border: 0;
-    outline: 0;
-    padding: 0;
-    margin: 0;
+    font-family: 'Trebuchet MS';
+    font-size: 20px;
+    line-height: 25px;
 }
 
 section.active{
@@ -259,8 +212,7 @@ section.active{
     max-height: 20%;
     overflow-y: auto;
     overflow-x: hidden;
-
-    font-family: 'Trebuchet Ms';
+    font-family: 'Trebuchet MS';
 }
 
 #overview header{
@@ -338,6 +290,10 @@ section.active{
 
 #document-list li:hover{
     background-color: #CCE6FF;
+}
+
+#document-list li.selected {
+    background: #FFEFCC;
 }
 
 #documents-list li a{
@@ -444,4 +400,18 @@ td {
     vertical-align: top;
     margin: 3px;
     padding: 6px;
+}
+
+div.progress-container {
+  border: 1px solid #ccc;
+  width: 100%;
+  margin: 5px 5px 2px 0;
+  padding: 1px;
+  float: left;
+  background: white;
+}
+
+div.progress-container > div {
+  background-color: #ACE97C;
+  height: 12px
 }
